--- a/Design Document/design_doc.tex
+++ b/Design Document/design_doc.tex
@@ -58,11 +58,21 @@ Cityscapes is a subset of Daimler Automotive Company that is creating datasets a
 
 \section{Technology Overview}
 \subsection{Algorithms testing}
-There are three major milestones for the algorithm testing process. Environment conditions testing and unusual objects testing. We are planning to keep collecting on road images and video data while working on testing.\\
-By applying database technologies we can collect different weather conditions and categorize them as such. Using machine learning algorithms to deal with the data we can see if the algorithm can provide a safer output than before. Note we are not concerned about real time (0.1 sec) algorithm speed. 
-We will primarily use parameter testing groups with many images in them. For example we have a full of images where it is snowing. Then we keep changing the variables in the test and continue testing.\\
-We can setup a test of moving unexpected objects and test them. Randomly set up various conditions where objects suddenly appear to the front of cars, and then test how quickly the algorithm reacts and stops the vehicle. We put all these conditions onto the columns and all outputs onto the rows in a matrix (more on this later) so that we can combine the information and tell if any algorithms could cause a crash.\\
-Finally, we will set up a global matrix, and divide the columns onto two parts with weather conditions testing and unusual objects testing. In addition, dividing the rows onto three parts as well, for each testing outcome with the algorithms we have. We then put all conditions onto the columns and all output onto the rows in the matrix so that we can cross reference the information to gain insight in how each algorithm performed and whether it is failing with a given condition. From that information we can try to determine which parts of the software algorithm we can try to fix.
+There are two major milestones for each algorithm testing process. 
+Algorithm required environment setting and unusual objects with different conditions testing. 
+We are planning to keep collecting on road images and video data while working on testing.\\
+By applying database technologies we can collect different weather conditions and categorize them as such. 
+Using machine learning algorithms to deal with the data we can see if the algorithm can provide a safer output than before. 
+Note we are not concerned about real time (0.1 sec) algorithm speed. 
+We will primarily use parameter testing groups with many images in them. 
+For example we have a full of images where it is snowing, then we keep changing the variables of objects color in the data images and continue testing.\\
+We can setup a test of moving unexpected objects and test them. 
+Randomly set up various conditions where objects suddenly appear to the front of cars, and then test how quickly the algorithm reacts and stops the vehicle by checking when the objects are recognized. 
+We put all these conditions onto the columns and all outputs onto the rows in a matrix (more on this later) so that we can combine the information and tell if any algorithms could cause a crash(Never recognize some specific objects).\\
+Finally, we will set up a global matrix, and divide the columns onto two parts with weather conditions testing and unusual objects testing. 
+In addition, dividing the rows onto three parts as well, for each testing outcome with the algorithms we have. 
+We then put all conditions onto the columns and all output onto the rows in the matrix so that we can cross reference the information to gain insight in how each algorithm performed and whether it is failing with a given condition.
+From that information we can try to determine which parts of the software algorithm we can try to fix or send those images failing the algorithms to designers.
 
 \subsection{Hardware}
 The hardware consists of the recording device: An HD dash camera, and storage unit: SD card and an external hard drive.\\
@@ -117,18 +127,24 @@ These markups can then be compared across each other to figure out which ones pe
 However each frame must be checked manually to make sure the object in the frame was registered correctly. 
 
 \subsection{Testing}
-White box testing is our main idea for all algorithms testing. We are planning to deeply look at the source code and base on clearly understanding which algorithm is used for which condition before the testing. It is hard for us to have enough knowledge to read the source code in limited time, which is one of the main disadvantage. However, we will keep in touch with someone in the algorithms developing team for further help. On the other hand, we have the advantage of having a white box testing. This is helpful since there are large amount of data that we need to test, and due to the need auto testing. 
+White box testing is our main idea for all algorithms testing. 
+We are planning to deeply look at the source code and base on clearly understanding how the algorithm works and what environment is required before the testing. 
+It is hard for us to have enough knowledge to read the source code in limited time, which is one of the main disadvantage.
+Also, setting up the environment for running the algorithm is one of the main task as well.
+However, we will keep in touch with someone in the algorithms developing team for further help. 
+On the other hand, we have the advantage of having a white box testing. 
+This is helpful since there are large amount of data that we need to test, and due to the need auto testing. 
 
 \subsection{Data Analysis and Results}
 There are two methods of analysis we will plot. 
 The first method is individual testing on objects and lighting per algorithm. 
 These will be analyzed manually by checking frames with a testable conditions to see if the algorithms correctly handle the situation.
 We then will make note on each testable image of either success or failure for each algorithm we test.
-Thus creating a matrix of testing parameters for analysis and comparison.
-From there, we can determine not only which factor failed in a given image, but also determine how each algorithm performed for each test image. 
+Thus creating a matrix of testing parameters including x-axle having different conditions and y-axle having all kinds of unusual objects on the road, for analysis and comparison.
+From there, we can determine not only which factor failed in a given image with what specific condition, but determine how each algorithm performed for each test image as well. 
 
 \section{Conclusion}
-We have described a direction of our project and some milestones with how we planned to process.
+We have described a direction of our project and some milestones with how we planned to process. Specifically, we made the details about what technologies we will use for three primary fields collecting dataset, images recognition algorithm environment setup, and the algorithm testing. Result analysis is the one of the most important process, and it will provide the information that if the algorithms fail in some cases. Therefore, We decided to use two methods to ensure as many as elements are considered and the results should be rational and believable. 
       
       
 \section{Change Log}
@@ -138,7 +154,17 @@ We have described a direction of our project and some milestones with how we pla
 	\item Updated algorithms testing section to exclude camera blind spots, not something in our scope as of now.
 	\item Updated hardware and software information based on products we have used for certain tasks
 	\item Made changes to reflect that we are going to be testing algorithms from different developers and that those algorithms have their own machine learning knowledge base.
-	\item Added change log section 
+	\item Added change log section\\
+
+Tanner Fry works log above.\\
+    
+    \item Made changes to algorithms testing that what are the main steps on the whole process as well as the methods to test actual images with passing or failing result images output.
+    \item Minor updating the testing tasks and the method to overcome them.
+    \item Giving more details on result data analysis.
+    \item Revised the conclusion to summarize what we did for designing what technologies we are using with key words.\\
+     
+Xilun Guo works log above.\\
+
 \end{itemize}
 
 \newpage
@@ -200,7 +226,18 @@ We have described a direction of our project and some milestones with how we pla
 
 \newpage
 
-\begin{thebibliography}{1}
+\bibliographystyle{IEEEtran}
+\bibliography{Sources}
+\begin{thebibliography}{12}
+
+\bibitem{Cityscapes Scripts} https://github.com/mcordts/cityscapesScripts.
+\textit{Part of the Cityscapes team} Marius Cordts, Mohamed Omran.
+
+\bibitem{Cityscapes} https://www.cityscapes-dataset.com/
+\textit{Cityscapes subset of Daimler} 2016 Cityscapes Dataset · by Marius Cordts 
+
+\bibitem{Dr. Pedro Kroger} http://pedrokroger.net/choosing-best-python-ide/
+\textit{Choosing the Best Python IDE} Dr. Pedro Kroger
 
 \end{thebibliography}
         
